--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 version: "3.8"
 services:
   frontend:
+    container_name: frontend
     build: /frontend
     ports:
       - "8080:8080"
@@ -8,6 +9,7 @@ services:
       - backend
 
   backend:
+    container_name: backend
     build: /backend
     ports:
       - "8000:8000"
