--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.8"
 services:
   frontend:
     container_name: frontend
-    build: /frontend
+    build: ./frontend
     ports:
       - "8080:8080"
     depends_on:
@@ -10,6 +10,6 @@ services:
 
   backend:
     container_name: backend
-    build: /backend
+    build: ./backend
     ports:
       - "8000:8000"
