--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
     build: ./frontend
     ports:
       - "8080:8080"
+    volumes:
+      - ./frontend:/app/frontend
     depends_on:
       - backend
 
@@ -13,3 +15,5 @@ services:
     build: ./backend
     ports:
       - "8000:8000"
+    volumes:
+      - ./backend:/app/backend
