Fixed HMR & created Navbar prototype
Edited Dockerfile & docker-compose.yml in order to fix error where any updates would not show up.

Also added a Navbar component. This will need to be refactored to be more reusable - hard coding all values within navbar is not ideal. We will want to reuse this component later when implementing the sub-navbar

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,11 +2,14 @@ version: "3.8"
 services:
   frontend:
     container_name: frontend
-    build: ./frontend
+    build:
+      context: ./frontend
+      target: development
     ports:
       - "8080:8080"
     volumes:
-      - ./frontend:/app/frontend
+      - ./frontend:/app
+      - /app/node_modules
     depends_on:
       - backend
 
