--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,6 +1,6 @@
 # Build stage
 FROM node:16.16.0 AS build
-WORKDIR /app/frontend
+WORKDIR /app
 COPY package*.json ./
 RUN npm install
 COPY . .
@@ -9,8 +9,8 @@ RUN npm run build
 # Development stage
 FROM node:16.16.0 AS development
 
-# Create app directory
-WORKDIR /app/frontend
+# Set working directory
+WORKDIR /app
 
 # Install app dependencies
 COPY package*.json ./
@@ -19,6 +19,13 @@ RUN npm install
 # Copy app source code
 COPY . .
 
+# Fix permissions
+RUN chown -R node:node /app/node_modules
+
+# Use non-root user
+USER node
+
 # Expose port and start the app
 EXPOSE 8080
 CMD ["npm", "run", "dev"]
+
