--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,14 @@ version: "3.8"
 services:
   frontend:
     container_name: frontend
-    build: ./frontend
+    build:
+      context: ./frontend
+      target: development
     ports:
       - "8080:8080"
+    volumes:
+      - ./frontend:/app
+      - /app/node_modules
     depends_on:
       - backend
 
@@ -13,3 +18,5 @@ services:
     build: ./backend
     ports:
       - "8000:8000"
+    volumes:
+      - ./backend:/app/backend
