6: Updating docker logic to expose endpoints, refactoring endpoint, adding more requirements, (deleting pycache later) pushing to debug 'Client' object has no attribute 'query'

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,17 +1,20 @@
-# Base image
-FROM python:3.8
+# Dockerfile in backend directory
 
-# Set working directory
+# Base image
+FROM python:3.11-slim
+
+# Set the working directory
 WORKDIR /app
 
-# RUN pisp install fastapi uvicorn
+# Copy backend files into the container
+COPY . /app
 
 # Install dependencies
-COPY requirements.txt .
+COPY requirements.txt ./
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy project files
-COPY . .
+# Expose the port
+EXPOSE 8000
 
-# Command to run the application
+# Run the application
 CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
