Adjusting git.ignore
Adjusted git-ignore to include node modules.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # Ignore all JSON files
 *.json
 
+#ignore Node_modules
+node_modules
+
 # Ignore all TXT files
 *.txt
 # exception: requirements.txt
