update docker files

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -6,6 +6,9 @@ FROM python:3.11-slim
 # Set the working directory
 WORKDIR /app
 
+# Declare the build argument
+ARG HERMES_BE_PORT
+
 # Copy backend files into the container
 COPY . /app
 
@@ -14,7 +17,7 @@ COPY requirements.txt ./
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Expose the port
-EXPOSE 8000
+EXPOSE $HERMES_BE_PORT
 
 # Run the application
 CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
