--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,8 +1,8 @@
-fastapi>=0.68.0,<0.69.0
 pydantic>=1.8.0,<2.0.0
 uvicorn>=0.15.0,<0.16.0
 firebase-admin>=6.5.0, <7.0.0
 sqlalchemy>=1.4.0,<2.0.0
-fastapi-pagination==0.12.26
 aiofiles
 python-dotenv @ https://files.pythonhosted.org/packages/44/2f/62ea1c8b593f4e093cc1a7768f0d46112107e790c3e478532329e434f00b/python_dotenv-1.0.0-py3-none-any.whl
+fastapi==0.112.0
+fastapi-pagination==0.12.26
