--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -6,7 +6,7 @@ FROM python:3.11-slim
 # Set the working directory
 WORKDIR /app
 
-# Declare the build argument
+# Declare the build argument (although not directly used here, it's kept for build-time context)
 ARG HERMES_BE_PORT
 
 # Copy backend files into the container
@@ -17,7 +17,7 @@ COPY requirements.txt ./
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Expose the port
-EXPOSE $HERMES_BE_PORT
+EXPOSE ${HERMES_BE_PORT}
 
-# Run the application
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", $HERMES_BE_PORT]
+# Run the application using the shell form of CMD to allow variable substitution
+CMD uvicorn main:app --host 0.0.0.0 --port ${HERMES_BE_PORT}
