--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,13 +20,15 @@ jobs:
 
     - name: Deploy to Server
       run: |
-        BRANCH=$(git rev-parse --abbrev-ref HEAD)
-        if [[ "$BRANCH" == "dev" ]]; then
-          echo "Deploying dev environment"
-          ssh -o StrictHostKeyChecking=no xbnrxout@xavrema.com "bash /home/xbnrxout/deploy_hermes.sh dev"
-        elif [[ "$BRANCH" == "main" ]]; then
-          echo "Deploying main environment"
-          ssh -o StrictHostKeyChecking=no xbnrxout@xavrema.com "bash /home/xbnrxout/deploy_hermes.sh main"
-        else
-          echo "No deployment configured for this branch"
+        if [[ "${GITHUB_REF}" == "refs/tags/deploy-site" ]]; then
+          BRANCH=$(git rev-parse --abbrev-ref HEAD)
+          if [[ "$BRANCH" == "dev" ]]; then
+            echo "Deploying dev environment"
+            ssh -o StrictHostKeyChecking=no xbnrxout@xavrema.com "bash /home/xbnrxout/deploy_hermes.sh dev"
+          elif [[ "$BRANCH" == "main" ]]; then
+            echo "Deploying main environment"
+            ssh -o StrictHostKeyChecking=no xbnrxout@xavrema.com "bash /home/xbnrxout/deploy_hermes.sh main"
+          else
+            echo "No deployment configured for this branch"
+          fi
         fi
