--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,16 +2,16 @@ version: "3.8"
 
 services:
   frontend:
-    container_name: '${ENV}_frontend'
+    container_name: "${ENV}_frontend"
     build:
       context: ./frontend
       target: development
       args:
-        HERMES_FE_PORT: '${HERMES_FE_PORT}' # Pass the environment variable as a build argument
+        HERMES_FE_PORT: "${HERMES_FE_PORT}" # Pass the environment variable as a build argument
     ports:
-      - '${HERMES_FE_PORT}:${HERMES_FE_PORT}'
+      - "${HERMES_FE_PORT}:${HERMES_FE_PORT}"
     environment:
-      - 'HERMES_FE_PORT=${HERMES_FE_PORT}'
+      - "HERMES_FE_PORT=${HERMES_FE_PORT}"
     volumes:
       - ./frontend:/app
       - /app/node_modules
@@ -21,16 +21,16 @@ services:
       - app-network
 
   backend:
-    container_name: '${ENV}_backend'
+    container_name: "${ENV}_backend"
     build:
       context: ./backend
       args:
-        HERMES_BE_PORT: '${HERMES_BE_PORT}' # Pass the environment variable as a build argument
+        HERMES_BE_PORT: "${HERMES_BE_PORT}" # Pass the environment variable as a build argument
     environment:
-      - 'HERMES_BE_PORT=${HERMES_BE_PORT}'
+      - "HERMES_BE_PORT=${HERMES_BE_PORT}"
       - PYTHONUNBUFFERED=1
     ports:
-      - '${HERMES_BE_PORT}:${HERMES_BE_PORT}'
+      - "${HERMES_BE_PORT}:${HERMES_BE_PORT}"
     volumes:
       - ./backend:/app
       - ./frontend/dist:/app/frontend/dist
