--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
       target: development
       args:
         HERMES_FE_PORT: '${HERMES_FE_PORT}' # Pass the environment variable as a build argument
+    env_file:
+      - ./.env
     ports:
       - '${HERMES_FE_PORT}:${HERMES_FE_PORT}'
     environment:
@@ -26,6 +28,8 @@ services:
       context: ./backend
       args:
         HERMES_BE_PORT: '${HERMES_BE_PORT}' # Pass the environment variable as a build argument
+    env_file:
+      - ./.env
     environment:
       - 'HERMES_BE_PORT=${HERMES_BE_PORT}'
       - PYTHONUNBUFFERED=1
