--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,28 +2,29 @@ version: "3.8"
 
 services:
   frontend:
-    container_name: "${ENV}_frontend"
+    container_name: '${ENV}_frontend'
     build:
       context: ./frontend
-      target: development
+      target: ${BUILD_TARGET}  # Switch between development and production using the BUILD_TARGET variable
       args:
         HERMES_FE_PORT: '${HERMES_FE_PORT}' # Pass the environment variable as a build argument
     env_file:
       - ./.env
     ports:
-      - "${HERMES_FE_PORT}:${HERMES_FE_PORT}"
+      - '${HERMES_FE_PORT}:${HERMES_FE_PORT}' # For development environment
+      # For production, map to the default production port (e.g., 3000:3000)
     environment:
-      - "HERMES_FE_PORT=${HERMES_FE_PORT}"
+      - 'HERMES_FE_PORT=${HERMES_FE_PORT}'
     volumes:
-      - ./frontend:/app
+      - ./frontend:/app        # Mount source code for development
       - /app/node_modules
     depends_on:
-      - backend
+      - backend 
     networks:
       - app-network
 
   backend:
-    container_name: "${ENV}_backend"
+    container_name: '${ENV}_backend'
     build:
       context: ./backend
       args:
@@ -31,10 +32,10 @@ services:
     env_file:
       - ./.env
     environment:
-      - "HERMES_BE_PORT=${HERMES_BE_PORT}"
+      - 'HERMES_BE_PORT=${HERMES_BE_PORT}'
       - PYTHONUNBUFFERED=1
     ports:
-      - "${HERMES_BE_PORT}:${HERMES_BE_PORT}"
+      - '${HERMES_BE_PORT}:${HERMES_BE_PORT}'
     volumes:
       - ./backend:/app
       - ./frontend/dist:/app/frontend/dist
