--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.6.0",
+    "serve": "^14.2.3",
     "vue": "^3.4.29",
     "vue-router": "^4.0.13"
   },
